Add Blogs and Events Tests

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -58,7 +58,10 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\Blogs\BlogsTests.cs" />
     <Compile Include="Tests\DynamicItems\DynamicItemsTests.cs" />
+    <Compile Include="Tests\Events\CalendarTests.cs" />
+    <Compile Include="Tests\Events\EventsTests.cs" />
     <Compile Include="Tests\News\NewsTests.cs" />
     <Compile Include="Tests\Pages\PagesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
